--- a/deep_learning_model/data_preprocessing.ipynb
+++ b/deep_learning_model/data_preprocessing.ipynb
@@ -14,7 +14,7 @@
     "import shutil\n",
     "import random\n",
     "import cv2\n",
-    "# from cv2 import dnn_superres\n",
+    "from cv2 import dnn_superres\n",
     "import collections\n",
     "import scipy.ndimage as ndimage\n",
     "import matplotlib.pyplot as plt\n",
@@ -216,7 +216,6 @@
    "outputs": [],
    "source": [
     "delete_augmented = False\n",
-    "\n",
     "if delete_augmented:\n",
     "    for class_id in range(25):\n",
     "        for direct_id in directions_classes:\n",
@@ -236,11 +235,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "train_path = 'data/images_splited_balanced_upscaled/train/'\n",
+    "directions_classes = [0,1,2,3,5]\n",
     "for class_id in range(25):\n",
     "    for direct_id in directions_classes:\n",
     "        path_imgs = train_path+str(class_id)+'/'+str(direct_id)\n",
