Data preprocessing added used algorithm

--- a/deep_learning_model/data_preprocessing.ipynb
+++ b/deep_learning_model/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
     "import shutil\n",
     "import random\n",
     "import cv2\n",
-    "# from cv2 import dnn_superres\n",
+    "from cv2 import dnn_superres\n",
     "import collections\n",
     "import scipy.ndimage as ndimage\n",
     "import matplotlib.pyplot as plt\n",
@@ -248,7 +248,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Split data in 5 classes such as:\n",
+    "Create two datasets that contains only blue and white team separately"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shutil.rmtree('data/images_splited_balanced_upscaled_team1/')\n",
+    "shutil.rmtree('data/images_splited_balanced_upscaled_team2/')\n",
+    "shutil.copytree('data/images_splited_balanced_upscaled_team3/', 'data/images_splited_balanced_upscaled_team1/')\n",
+    "shutil.copytree('data/images_splited_balanced_upscaled_team3/', 'data/images_splited_balanced_upscaled_team2/')\n",
+    "team1 = [0, 1, 2, 3, 5, 6, 9, 10, 11, 14, 22]\n",
+    "team2 = [4, 7, 12, 13, 15, 16, 17, 18, 19, 21, 23]\n",
+    "referee_and_others = [8, 20, 24]\n",
+    "old_classes = [np.array(team1), np.array(team2), np.array(referee_and_others)]\n",
+    "new_classes = [np.arange(11), np.arange(11)]\n",
+    "folder = \"data/images_splited_balanced_upscaled_team\"\n",
+    "paths = [folder+'1/', folder+'2/']\n",
+    "subdirs = ['train/', 'test/', 'val/']\n",
+    "for i, path in enumerate(paths):\n",
+    "    for subdir in subdirs:\n",
+    "        if i == 0:\n",
+    "            for old_class_rm in old_classes[1]:\n",
+    "                shutil.rmtree(path+subdir+str(old_class_rm))\n",
+    "            for old_class_rm in old_classes[2]:\n",
+    "                shutil.rmtree(path+subdir+str(old_class_rm))\n",
+    "        elif i == 1:\n",
+    "            for old_class_rm in old_classes[0]:\n",
+    "                shutil.rmtree(path+subdir+str(old_class_rm))\n",
+    "            for old_class_rm in old_classes[2]:\n",
+    "                shutil.rmtree(path+subdir+str(old_class_rm))\n",
+    "        for old_class_rn, new_class in zip(old_classes[i], new_classes[i]):\n",
+    "                shutil.move(path+subdir+str(old_class_rn), path+subdir+str(new_class))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Split initial data in 5 classes such as:\n",
     "0 - blue team plus their goalkeeper\n",
     "1 - white team plus their goalkeeper\n",
     "2 - main referee\n",
@@ -319,7 +360,7 @@
     "for path, needed_num_imgs_goalkeep, needed_num_images_others in zip(paths, balanced_images_num_goalkeep,\n",
     "                                                                    balanced_images_num_others):\n",
     "    for class_id in referee_and_others:\n",
-    "        print(class_id)\n",
+    "#         print(class_id)\n",
     "        image_names = os.listdir(path+str(class_id))\n",
     "        num_images = len(image_names)\n",
     "        while num_images < needed_num_images_others:\n",
